# SegundoCortePrograweb

./: README.md  app.db  pyproject.toml  requirements.txt
src/anuncio/: __init__.py  forms.py  models.py  run.py
src/anuncio/static/css/: style.css
src/anuncio/templates/: asset_view.html  base_template.html  index.html  login_form.html  signup_form.html
src/anuncio/templates/admin/: ad_form.html
src/asset_manager/: forms.py  models.py  run.py
src/asset_manager/static/: style.css
src/asset_manager/templates/: 404.html  asset_view.html  base_template.html
